修复新创建的Act不显示及无法添加Chapter的问题